--- a/src/assets/styles/tailwind.scss
+++ b/src/assets/styles/tailwind.scss
@@ -58,13 +58,16 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.inner-shadow-main {
+    box-shadow: inset 4px 4px 4px 0 rgba(0,0,0,0.2), inset -4px -4px 4px 0 rgba(255,255,255,0.04);
+}
+
 .transform-middle {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 }
-
 
 @layer components {
     .big-btn {
