--- a/src/assets/styles/tailwind.scss
+++ b/src/assets/styles/tailwind.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    height: 100%;
+    background: rgb(24, 24, 27);
+}
 
 // TODO: remove this if not needed
 .shine {
@@ -72,5 +76,9 @@
 @layer components {
     .big-btn {
         @apply h-24 w-48 flex items-center justify-center rounded-lg cursor-pointer;
+    }
+
+    .little-round-btn {
+        @apply w-20 h-20 bg-gray-gradient rounded-full shadow-main cursor-pointer;
     }
 }
